<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginsystem.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo1"
                app:tint="@color/main" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo3"
                app:tint="@color/black" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/input1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/input1"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:buttonTint="@color/txtColor3"
                android:minHeight="48dp"
                android:visibility="gone"
                android:text="@string/are_you_admin"
                android:textColor="@color/txtColor1"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUp"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/btn_app3"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/txtColor1" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/txtColor1"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/txtColor3"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>