<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginsystem.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo1"
                app:tint="@color/main" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo3"
                app:tint="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:layout_margin="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="end"
                android:visibility="gone"
                android:text="@string/forgot_password"
                android:textColor="@color/txtColor1"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/btn_app3"
                android:gravity="center"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/signUp"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/btn_app4"
                android:textColor="@color/txtColor3"
                android:gravity="center"
                android:text="@string/sign_up" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>