<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.home.ui.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <RelativeLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_16sdp">

                <ImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_4sdp"
                    android:elevation="@dimen/_10sdp"
                    android:src="@drawable/ic_edit" />

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardCornerRadius="@dimen/_60sdp">

                    <RelativeLayout
                        android:id="@+id/getImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/con_app">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:padding="@dimen/_24sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_camera" />

                        <ImageView
                            android:id="@+id/setImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/txtColor1"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/admin"
                android:textColor="@color/txtColor3"
                android:textSize="@dimen/_16ssp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/id_number"
                android:visibility="gone"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bankAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:visibility="gone"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/input1"
                android:hint="@string/bank_account"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/saveEdit"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_32sdp"
                android:background="@drawable/btn_app"
                android:gravity="center"
                android:text="@string/save_edit"
                android:textColor="@color/txtColor2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signOut"
                style="@style/btnStyleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:background="@drawable/btn_app2"
                android:gravity="center"
                android:text="@string/sign_out"
                android:textColor="@color/txtColor2"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>