<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.article.AddArticleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/goBack"
            android:layout_width="match_parent"
            android:padding="@dimen/_8sdp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/main"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:textColor="@color/txtColor1"
                android:text="@string/add_article"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/con1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_article_department"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/txtColor4"
                    android:layout_marginHorizontal="@dimen/_4sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:background="@drawable/input1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/dept"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/txtColor1"
                        tools:listitem="@layout/item_spinner" />

                    <ImageView
                        android:id="@+id/deptAdd"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/add_dept"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cover_article"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/txtColor4"
                    android:layout_marginHorizontal="@dimen/_4sdp" />

                <RelativeLayout
                    android:id="@+id/getImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/con_app">

                    <ImageView
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:scaleType="centerCrop"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_camera" />

                    <ImageView
                        android:id="@+id/setImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop" />

                </RelativeLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add Additional Pictures"
                        android:textSize="@dimen/_14sdp"
                        android:layout_weight="1"
                        android:textColor="@color/txtColor4"
                        android:layout_marginHorizontal="@dimen/_4sdp" />

                    <ImageView
                        android:id="@+id/imageAdd"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/add_dept"/>

                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageAdded"
                android:layout_below="@id/con1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageAdded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/input1"
                    android:hint="@string/article_title"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_14ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="start"
                    android:background="@drawable/input1"
                    android:hint="@string/write_the_article"
                    android:inputType="textMultiLine"
                    android:minLines="10"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/addArticle"
                    style="@style/btnStyleHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@drawable/btn_app3"
                    android:gravity="center"
                    android:text="@string/add_article" />


                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>